Name:                hsco
Version:             0.1.0
Synopsis:            haskell source code optimizer
Description:
    Conduct really basic haskell source code cleanup and manipulation.
    .
    * Add header and Copyright statements
    .
    * Remove redundant imports.
    .
    * Re-order imports alphabetically.
    .
    * Remove useless extensions.
    .
    * Remove unicode syntax.
    .
    * Move a module and rewrite all the import hierarchy.

License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Tools
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/vincenthz/hsco
Bug-Reports:         https://github.com/vincenthz/hsco/issues
Cabal-Version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/vincenthz/hsco

Executable           hsco
  Main-Is:           Main.hs
  other-modules:     Deunicode
                     HaskellOps
                     Header
                     Traverse
                     SafeFile
                     View
                     Lexer.Haskell
                     Lexer.Cabal
                     Data.String.Parse
  ghc-options:       -Wall -fno-warn-missing-signatures
  Hs-Source-Dirs:    src
  Build-depends:     base >= 4 && < 5
                   , directory
                   , filepath
                   , unix
                   , transformers
                   , mtl
                   , mtl
  default-language:  Haskell2010
